# HuiInsight

./: .cursorrules  .env.development  .env.example  .env.production.template  .env.test  .gitignore  AHDUNYI_CLIENT_FINAL.spec  DEPLOY_INSTRUCTIONS_FOR_OPENCLAW.md  EXE_TEST_GUIDE.md  FIX_SYSTEMD_FOR_OPENCLAW.txt  INSTALLATION_GUIDE.md  PROGRESS_SUMMARY.md  README.md  TEST_ENVIRONMENT_SETUP.md  TEST_ENVIRONMENT_VERIFICATION.md  TEST_EXE_NOW_READY.md  build_final.py  client_launcher.py  config.example.json  config.json  db_schema.md  fix_build_encoding.py  fix_flake8.py  fix_http_imports.py  fix_w391.py  format_python_files.py  package-lock.json  pyproject.toml  remove_type_args.py  requirements.txt  test_dynamic_roles.md  test_env_config.py
scripts/: check_workspace_hygiene.py  start-backend-dev.ps1  start-backend-dev.sh  start-frontend-dev.ps1
server/: .env.example  ahdunyi-api.service.template  ahdunyi-test-api.service  alembic.ini  main.py  requirements.txt
src/: main.py
tauri-app/: README.md  package.json  tsconfig.json  vite.config.ts
tauri-app/src-tauri/: Cargo.toml  tauri.conf.json
tauri-app/src-tauri/migrations/: 001_initial_schema.sql  002_add_performance_stats.sql
tauri-app/src-tauri/src/: config.rs  error.rs  lib.rs  main.rs
tauri-app/src-tauri/src/commands/: auth.rs  lib.rs  tasks.rs
tauri-app/src-tauri/src/database/: connection.rs  lib.rs  models.rs
test_cli/: Cargo.toml
utils/: room_monitor.py
web_client/: .env.example  .gitignore  README.md  index.html  package-lock.json  package.json  start_real_frontend.sh  tsconfig.json  (+1 more)
(+136 files in other folders)
